less: fixed unwanted horizontal scrollbar at 1080p due to nette.org redesign

--- a/www/static/css/editor.less
+++ b/www/static/css/editor.less
@@ -233,7 +233,7 @@
 
 		&.preview .column.preview {
 			.display(flex);
-			.flex-grow(1.2); // makes horizontal scrollbar not visible at 1080p
+			.flex-grow(1.4); // makes horizontal scrollbar not visible at 1080p
 
 			iframe {
 				.display(flex); /* for Safari */
@@ -243,11 +243,11 @@
 		}
 
 		&.code.preview .column.preview, &.code.diff .column.diff {
-			max-width: 1000px;
+			max-width: 1050px;
 		}
 
 		&.diff .column.diff {
-			.flex-grow(1.2); // to have the same width as preview
+			.flex-grow(1.4); // to have the same width as preview
 			display: block;
 			overflow-y: scroll;
 
